examples/test/testpolicy3961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3961
  namespace: namespace279
spec:
  podSelector:
    matchLabels:
      key31: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value10
      podSelector:
        matchLabels:
          key12: value14
          key1: value25
          key3: value20
